Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>torypages - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <title>torypages - Authors</title>
+        <link rel="stylesheet" href="http://torypages.com/me/theme/css/main.css" />
+        <link href="http://torypages.com/me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="torypages Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,14 +13,15 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">torypages </a></h1>
+                <h1><a href="http://torypages.com/me/">torypages </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/this-is-a-test-page.html">This is a  test page</a></li>
+                    <li><a href="http://torypages.com/me/pages/this-is-a-test-page.html">This is a  test page</a></li>
+                    <li><a href="http://torypages.com/me/pages/welcome-to-my-site.html">Welcome to my site</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for torypages</h1>
+    <h1>Authors on torypages</h1>
     <ul>
     </ul>
 </section>
@@ -37,6 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="http://torypages.com/me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
