--- a/archives.html
+++ b/archives.html
@@ -16,7 +16,7 @@
                 <h1><a href="http://torypages.com/me/">torypages </a></h1>
                 <nav><ul>
                     <li><a href="http://torypages.com/me/pages/this-is-a-test-page.html">This is a  test page</a></li>
-                    <li><a href="http://torypages.com/me/pages/welcome-to-my-site.html">Welcome to my site</a></li>
+                    <li><a href="http://torypages.com/me/">Welcome to My Site</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
