Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -24,7 +24,7 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="http://torypages.com/me"/>
-<meta property="og:image" content="../images/me.jpg">
+<meta property="og:image" content="http://torypages.com/me/images/me.jpg">
 
   <title>torypages &ndash; Authors</title>
 </head>
@@ -32,7 +32,7 @@
   <aside>
     <div>
       <a href="http://torypages.com/me">
-        <img src="../images/me.jpg" alt="Tory Law" title="Tory Law">
+        <img src="http://torypages.com/me/images/me.jpg" alt="Tory Law" title="Tory Law">
       </a>
       <h1><a href="http://torypages.com/me">Tory Law</a></h1>
       <p>Backend Software Developer in Toronto, Canada</p>
