Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div>
     <p>Welcome to my little slice of the Internet. Little indeed, I do not keep much of a presence here. But I do quite enjoy using technology to solve problems in elegant ways. I work in Linux environments and mostly program in Python. Checkout my GitHub and LinkedIn links along the left for more information.</p>
 <h1>What have I been up to?</h1>
-<p>I have not had this web page for too long, so, this list is not too extensive, but it is too be a living document cutting off at the beginning of each new year.</p>
+<p>I have not had this web page for too long, so, this list is not too extensive, but it is to be a living document cutting off at the beginning of each new year.</p>
 <h2>2016</h2>
 <ul>
 <li>Python scripting</li>
