--- a/tags.html
+++ b/tags.html
@@ -41,7 +41,7 @@
         </ul>
       </nav>
       <ul class="social">
-        <li><a class="sc-envelope-o" href="t.law@torypages.com" target="_blank"><i class="fa fa-envelope-o"></i></a></li>
+        <li><a class="sc-envelope-o" href="mailto:t.law@torypages.com" target="_blank"><i class="fa fa-envelope-o"></i></a></li>
         <li><a class="sc-github" href="https://github.com/torypages" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-linkedin" href="https://ca.linkedin.com/in/tory-law-444b681b" target="_blank"><i class="fa fa-linkedin"></i></a></li>
       </ul>
