Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
   </header>
   <div>
     <p>Welcome to my little slice of the Internet. Little indeed, I do not keep much of a presence here. But I do quite enjoy using technology to solve problems in elegant ways. I work in Linux environments and mostly program in Python. Checkout my GitHub and LinkedIn links along the left for more information.</p>
+<h1>Notable GitHub links</h1>
+<p>Just one for now, but, I recently starting keeping an on going cheatsheet of things I use pretty often, it can be found <a href="https://github.com/torypages/random/blob/master/things_i_forget.md">here</a>.</p>
 <h1>What have I been up to?</h1>
 <p>I have not had this web page for too long, so, this list is not too extensive, but it is to be a living document cutting off at the beginning of each new year.</p>
 <h2>2016</h2>
