Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 id="hello">Hello!</h1>
   </header>
   <div>
-    <p>Welcome to my little slice of the Internet. Little indeed, I do not keep much of a presence here. But I do quite enjoy using technology to solve problems in elegant ways. I work in Linux environments and mostly program in Python. Checkout my GitHub and LinkedIn links along the left for more information.</p>
+    <p>Welcome to my little slice of the Internet. Little indeed, I do not keep much of a presence here. But I do quite enjoy using technology to solve problems in elegant ways. I work in Linux environments and mostly program in Python. Checkout my GitHub and LinkedIn links along the left for more information. I also quite like testing human ability with endurance sports and day dreaming about whether we exist in a computer simulation and about the pros and cons of voluntarily entering into a computer simulation.</p>
 <h1>Notable GitHub links</h1>
 <p>Just one for now, but, I recently starting keeping an on going cheatsheet of things I use pretty often, it can be found <a href="https://github.com/torypages/random/blob/master/things_i_forget.md">here</a>.</p>
 <h1>What have I been up to?</h1>
