Revert "Generate Pelican site"
This reverts commit 7307a3d92c5381403d4c536bcee8c0aea45102cb.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta property="og:url" content="http://torypages.com/me"/>
 <meta property="og:image" content="http://torypages.com/me/images/me.jpg">
 
-  <title>torypages</title>
+  <title>torypages &ndash; Hello!</title>
 </head>
 <body>
   <aside>
@@ -49,7 +49,44 @@
   </aside>
   <main>
 
-
+<article>
+  <header>
+    <h1 id="hello">Hello!</h1>
+  </header>
+  <div>
+    <p>Welcome to my little slice of the Internet. Little indeed, I do not keep much of a presence here. But I do quite enjoy using technology to solve problems in elegant ways. I work in Linux environments and mostly program in Python. Checkout my GitHub and LinkedIn links along the left for more information. I also quite like testing human ability with endurance sports and day dreaming about whether we exist in a computer simulation and about the pros and cons of voluntarily entering into a computer simulation.</p>
+<h1>Notable GitHub links</h1>
+<p>Just one for now, but, I recently starting keeping an on going cheatsheet of things I use pretty often, it can be found <a href="https://github.com/torypages/random/blob/master/things_i_forget.md">here</a>.</p>
+<h1>What have I been up to?</h1>
+<p>I have not had this web page for too long, so, this list is not too extensive, but it is to be a living document cutting off at the beginning of each new year.</p>
+<h2>2016</h2>
+<ul>
+<li>Python scripting</li>
+<li>data integrations and ETL</li>
+<li>MongoDB optimization</li>
+<li>working on a quickly evolving and quickly scaling big data platform</li>
+<li>Apache Mesos </li>
+<li>some Apache Spark and Scala</li>
+<li>marketing automation</li>
+<li>seeing if I can learn more about stats</li>
+</ul>
+<h2>2014 - 2015</h2>
+<ul>
+<li>Python scripting</li>
+<li>customizing data analytics with business rules written in Python</li>
+<li>Linux administration</li>
+<li>MongoDB deployments, scaling, and administration</li>
+<li>marketing automation</li>
+</ul>
+<h2>&lt; 2014</h2>
+<ul>
+<li>I'd love to have memory that served be this well, but I have a few points</li>
+<li>considered venturing into IT Law</li>
+<li>studied how to us IT for business</li>
+<li>taught myself a lot about software development and Linux</li>
+</ul>
+  </div>
+</article>
 
     <footer>
         <p>&copy; Tory Law </p>
@@ -60,14 +97,5 @@
 
 
 
-<script type="application/ld+json">
-{
-  "@context" : "http://schema.org",
-  "@type" : "Blog",
-  "name": " torypages ",
-  "url" : "http://torypages.com/me",
-  "image": "http://torypages.com/me/images/me.jpg",
-  "description": ""
-}
-</script></body>
+</body>
 </html>
