Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
 <p>Just one for now, but, I recently starting keeping an on going cheatsheet of things I use pretty often, it can be found <a href="https://github.com/torypages/random/blob/master/things_i_forget.md">here</a>.</p>
 <h1>What have I been up to?</h1>
 <p>I have not had this web page for too long, so, this list is not too extensive, but it is to be a living document cutting off at the beginning of each new year.</p>
+<h2>2017</h2>
+<ul>
+<li>Python</li>
+<li>Flask</li>
+<li>AWS (EC2, EBS, Kinesis, SQS, Cloud Formation, Cloud Watch, RDS)</li>
+<li>Meetups</li>
+<li><a href="https://www.meetup.com/Toronto-Apache-Spark/events/239840844/">Toronto Apache Spark #20</a></li>
+<li><a href="https://www.meetup.com/Toronto-Artificial-Intelligence-Deep-Learning/events/240092772/">Get Your Feet Wet with H2O</a></li>
+<li><a href="https://www.meetup.com/DataforGood/events/239552872/">Predictive vs. Causal Analysis - Unique Data Science Needs in the Social Sector</a></li>
+<li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595646/">Lesson 2: Introductory workshop to TensorFlow</a></li>
+<li><a href="https://www.meetup.com/Toronto-AI/events/240567493/">AI workshop - TensorFlow intro</a></li>
+<li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595706/">Lesson 3: Machine Learning in TensorFlow</a></li>
+<li>Completed online learning</li>
+<li><a href="https://www.coursera.org/learn/python-data-analysis">Introduction to Data Science in Python</a></li>
+<li><a href="https://www.coursera.org/learn/scala-spark-big-data">Big Data Analysis with Scala and Spark</a></li>
+<li>Some scala</li>
+<li>Passionate discussions about build processes and repository architecture</li>
+</ul>
 <h2>2016</h2>
 <ul>
 <li>Python scripting</li>
@@ -82,7 +100,7 @@
 <ul>
 <li>I'd love to have memory that served be this well, but I have a few points</li>
 <li>considered venturing into IT Law</li>
-<li>studied how to us IT for business</li>
+<li>studied how to use IT for business</li>
 <li>taught myself a lot about software development and Linux</li>
 </ul>
   </div>
