--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 <li>Python</li>
 <li>Flask</li>
 <li>AWS (EC2, EBS, Kinesis, SQS, Cloud Formation, Cloud Watch, RDS)</li>
-<li>Meetups</li>
-<li><a href="https://www.meetup.com/Toronto-Apache-Spark/events/239840844/">Toronto Apache Spark #20</a></li>
-<li><a href="https://www.meetup.com/Toronto-Artificial-Intelligence-Deep-Learning/events/240092772/">Get Your Feet Wet with H2O</a></li>
-<li><a href="https://www.meetup.com/DataforGood/events/239552872/">Predictive vs. Causal Analysis - Unique Data Science Needs in the Social Sector</a></li>
-<li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595646/">Lesson 2: Introductory workshop to TensorFlow</a></li>
-<li><a href="https://www.meetup.com/Toronto-AI/events/240567493/">AI workshop - TensorFlow intro</a></li>
-<li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595706/">Lesson 3: Machine Learning in TensorFlow</a></li>
-<li>Completed online learning</li>
-<li><a href="https://www.coursera.org/learn/python-data-analysis">Introduction to Data Science in Python</a></li>
-<li><a href="https://www.coursera.org/learn/scala-spark-big-data">Big Data Analysis with Scala and Spark</a></li>
+<li>Meetups
+  <strong> <a href="https://www.meetup.com/Toronto-Apache-Spark/events/239840844/">Toronto Apache Spark #20</a>
+  </strong> <a href="https://www.meetup.com/Toronto-Artificial-Intelligence-Deep-Learning/events/240092772/">Get Your Feet Wet with H2O</a>
+  <strong> <a href="https://www.meetup.com/DataforGood/events/239552872/">Predictive vs. Causal Analysis - Unique Data Science Needs in the Social Sector</a>
+  </strong> <a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595646/">Lesson 2: Introductory workshop to TensorFlow</a>
+  <strong> <a href="https://www.meetup.com/Toronto-AI/events/240567493/">AI workshop - TensorFlow intro</a>
+  </strong> <a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595706/">Lesson 3: Machine Learning in TensorFlow</a></li>
+<li>Completed online learning
+   <strong> <a href="https://www.coursera.org/learn/python-data-analysis">Introduction to Data Science in Python</a>
+   </strong> <a href="https://www.coursera.org/learn/scala-spark-big-data">Big Data Analysis with Scala and Spark</a></li>
 <li>Some scala</li>
 <li>Passionate discussions about build processes and repository architecture</li>
 </ul>
