Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <ul>
 <li>Python</li>
 <li>Flask</li>
-<li>AWS (EC2, EBS, Kinesis, SQS, Cloud Formation, Cloud Watch, RDS)</li>
+<li>AWS (EC2, EBS, Lambda, Kinesis, SQS, Cloud Formation, Cloud Watch, RDS)</li>
 <li>Meetups<ul>
 <li><a href="https://www.meetup.com/Toronto-Apache-Spark/events/239840844/">Toronto Apache Spark #20</a></li>
 <li><a href="https://www.meetup.com/Toronto-Artificial-Intelligence-Deep-Learning/events/240092772/">Get Your Feet Wet with H2O</a></li>
@@ -71,6 +71,8 @@
 <li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595646/">Lesson 2: Introductory workshop to TensorFlow</a></li>
 <li><a href="https://www.meetup.com/Toronto-AI/events/240567493/">AI workshop - TensorFlow intro</a></li>
 <li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595706/">Lesson 3: Machine Learning in TensorFlow</a></li>
+<li><a href="https://www.meetup.com/pydatato/events/240941576/">PyData Pandas Hands-On Session</a></li>
+<li><a href="https://www.meetup.com/MachineIntelligence/events/241024310/">Machine Intelligence Ethics</a></li>
 </ul>
 </li>
 <li>Completed online learning<ul>
