Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 <li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595706/">Lesson 3: Machine Learning in TensorFlow</a></li>
 <li><a href="https://www.meetup.com/pydatato/events/240941576/">PyData Pandas Hands-On Session</a></li>
 <li><a href="https://www.meetup.com/MachineIntelligence/events/241024310/">Machine Intelligence Ethics</a></li>
+<li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595741/">Lesson 4: Deployment of Kubernetes</a></li>
+<li><a href="https://www.meetup.com/Cognitive-Toronto/events/240784383/">Facial Recognition in Python with OpenCV &amp; Watson Visual Recognition</a></li>
 </ul>
 </li>
 <li>Completed online learning<ul>
@@ -82,6 +84,8 @@
 </li>
 <li>Some scala</li>
 <li>Passionate discussions about build processes and repository architecture</li>
+<li>Docker</li>
+<li>CircleCI</li>
 </ul>
 <h2>2016</h2>
 <ul>
