Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <li><a href="https://www.meetup.com/MachineIntelligence/events/241024310/">Machine Intelligence Ethics</a></li>
 <li><a href="https://www.meetup.com/Advanced-Spark-DeepLearni-ng-and-TensorFlow-Meetup/events/240595741/">Lesson 4: Deployment of Kubernetes</a></li>
 <li><a href="https://www.meetup.com/Cognitive-Toronto/events/240784383/">Facial Recognition in Python with OpenCV &amp; Watson Visual Recognition</a></li>
+<li><a href="https://www.meetup.com/Applied-AI-Toronto/events/241011317/">Applied AI Toronto Session # 1</a></li>
 </ul>
 </li>
 <li>Completed online learning<ul>
